# app/docs/swagger.json
@@ -221,7 +221,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/database.Order"
+                            "$ref": "#/definitions/handlers.VerifyOrderResponse"
                         }
                     }
                 }
@@ -531,43 +531,6 @@
                 }
             }
         },
-        "database.Order": {
-            "type": "object",
-            "properties": {
-                "entries": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/database.OrderEntry"
-                    }
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "orderCode": {
-                    "$ref": "#/definitions/null.String"
-                },
-                "timestamp": {
-                    "type": "string"
-                },
-                "transactionID": {
-                    "type": "string"
-                },
-                "user": {
-                    "description": "Keycloak UUID if user is authenticated",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/null.String"
-                        }
-                    ]
-                },
-                "vendor": {
-                    "type": "integer"
-                },
-                "verified": {
-                    "type": "boolean"
-                }
-            }
-        },
         "database.OrderEntry": {
             "type": "object",
             "properties": {
@@ -755,6 +718,38 @@
                 }
             }
         },
+        "handlers.VerifyOrderResponse": {
+            "type": "object",
+            "properties": {
+                "entries": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/database.OrderEntry"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "orderCode": {
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "string"
+                },
+                "transactionID": {
+                    "type": "string"
+                },
+                "user": {
+                    "type": "string"
+                },
+                "vendor": {
+                    "type": "integer"
+                },
+                "verified": {
+                    "type": "boolean"
+                }
+            }
+        },
         "null.Int": {
             "type": "object",
             "properties": {
@@ -763,18 +758,6 @@
                 },
                 "valid": {
                     "description": "Valid is true if Int64 is not NULL",
-                    "type": "boolean"
-                }
-            }
-        },
-        "null.String": {
-            "type": "object",
-            "properties": {
-                "string": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if String is not NULL",
                     "type": "boolean"
                 }
             }
